kustomize/overlay/prod/test-react-project-121321-prod-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-and-limited-ingress
  namespace: test-react-project-121321-prod
  labels:
    organizationId: org_214f8824-489e-4427-b043-83252b36ac2b
    projectId: project_cd3d5691-e552-40b9-95d3-a6c97549b15d
    environmentId: env_56ba14c4-181d-4489-a54a-f9e5d8fb2ad8
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              environmentId: env_56ba14c4-181d-4489-a54a-f9e5d8fb2ad8
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: skyu-system
    - from:
        - namespaceSelector:
            matchLabels:
              role: ingress
    - from:
        - namespaceSelector:
            matchLabels:
              role: observability
